# project-800ms

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  skills-lock.json
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/workflows/: workflow-registry.json
apps/api/: Dockerfile  alembic.ini  auth.py  db.py  errors.py  main.py  models.py  observability.py  pyproject.toml  rate_limit.py  request_id.py  requirements.txt  schemas.py  settings.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_init.py  0002_seed_demo_tenant.py  0002_seed_dev_tenant.py  0003_transcripts.py  0004_kb_chunks.py  0005_traces_restrict.py  0006_rls_kb_tables.py
apps/api/routes/: __init__.py  admin.py  engines.py  sessions.py  transcripts.py  usage.py  webhooks.py
apps/api/scripts/: smoke.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_cors.py  test_db_models.py  test_errors.py  test_main.py  test_observability.py  test_openapi.py  test_rate_limit.py  test_settings.py  test_transcripts.py  test_usage.py  test_v1_engines.py  test_v1_sessions.py  test_webhooks.py
apps/web/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  vite-env.d.ts
docs/: integration-guide.md
docs/brainstorms/: 2026-04-19-voice-stack-ab-experiment-requirements.md  2026-04-21-tts-abstraction-and-silero-qwen3-ab-requirements.md  2026-04-23-fastcosyvoice-fifth-tts-engine-requirements.md
docs/experiments/2026-04-19-stt-ab/: phase-a-results.md
docs/ideation/: 2026-04-23-helper-guide-npc-rag-ideation.md  2026-04-23-rag-memory-system-ideation.md
docs/plans/: 2026-04-19-001-feat-stt-ab-experiment-plan.md  2026-04-21-001-feat-tts-abstraction-piper-silero-qwen3-plan.md  2026-04-23-001-feat-fastcosyvoice-fifth-tts-engine-plan.md  2026-04-23-002-feat-helper-guide-npc-rag-mvp-plan.md
docs/solutions/best-practices/: kb-ingestion-pipeline-2026-04-30.md  runtime-placeholder-substitution-self-collision-2026-05-02.md
docs/solutions/build-errors/: libpython-shared-lib-missing-ubuntu-apt.md  torchcodec-codec-extra-pytorch-29.md  transformers-v5-isin-mps-friendly-coqui-tts.md
docs/solutions/logic-errors/: delete-sessions-missing-audio-seconds-2026-04-23.md  turn-id-counter-collides-on-agent-restart-2026-04-27.md
docs/solutions/security-issues/: retriever-internal-token-rotation-2026-04-27.md  xff-spoof-and-shared-cache-eviction-in-ip-rate-limiter-2026-04-20.md
docs/solutions/tts-selection/: r21-protocol.md  silero-spike-findings.md  wrapper-license.md
infra/: .env.example  Caddyfile.prod  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  livekit.prod.yaml  livekit.yaml  mistral-chat-template.jinja
infra/chat-templates/: qwen3-no-think.jinja
infra/qwen3-tts-wrapper/: Dockerfile  README.md  config.yaml  pyproject.toml
infra/qwen3-tts-wrapper/api/: main.py  security.py  voice_mapping.py
infra/qwen3-tts-wrapper/api/backends/: official_qwen3_tts.py  optimized_backend.py
infra/qwen3-tts-wrapper/api/routers/: openai_compatible.py
infra/qwen3-tts-wrapper/api/services/: audio_encoding.py
infra/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf  versions.tf
infra/terraform-gcp/: README.md  main.tf  outputs.tf  startup_script.sh  terraform.tfvars.example  variables.tf  versions.tf
scripts/: refresh_kb.sh
services/agent/: .dockerignore  Dockerfile  Dockerfile.base  env.py  gigaam_stt.py  kb_prompts.py  kb_retrieval.py  lang.py  main.py  models.py  overrides.py  pipeline.py  pyproject.toml  qwen3_tts.py  requirements.txt  silero_tts.py  stt_filter.py  transcript.py  transcript_sink.py  tts_factory.py  tts_utils.py  xtts_tts.py
services/agent/eval/results/: 2026-04-19-wer-smoke-rulibrispeech.csv  2026-04-19-wer-smoke.csv
services/agent/eval/rulibrispeech_eval_set/: truth.jsonl
services/agent/eval/russian_eval_set/: README.md  truth.jsonl
services/agent/scripts/: sample_common_voice.py  verify_vram.py  wer_smoke.py
services/agent/tests/: conftest.py  test_engine_parity.py  test_env.py  test_gigaam_stt.py  test_kb_retrieval.py  test_lang.py  test_main.py  test_overrides.py  test_pipeline_insertion.py  test_qwen3_tts.py  test_refusal_prompt.py  test_silero_tts.py  test_transcript_sink.py  test_tts_factory.py  test_xtts_tts.py
services/retriever/: .dockerignore  Dockerfile  Dockerfile.base  auth.py  chunker.py  config.py  db.py  embedder.py  errors.py  health.py  hybrid_search.py  ingest.py  logging_setup.py  main.py  middleware.py  models.py  pyproject.toml  retrieve.py  rewriter.py  schemas.py  synthetic_questions.py  tenants.py  traces.py
services/retriever/evals/: inscope_ru.yaml  probes_ru.yaml  run_eval.py  run_refusal_eval.py  sample_kb.yaml
services/retriever/tests/: conftest.py  test_body_size_limit.py  test_chunker.py  test_health.py  test_hybrid_search.py  test_ingest.py  test_migration.py  test_refusal_path.py  test_retrieve_endpoint.py  test_rewriter.py  test_synthetic_questions.py  test_timing_parity.py
specs/001-voice-assistant-core/: spec.md
specs/001-voice-assistant-core/checklists/: requirements.md
specs/002-helper-guide-npc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-helper-guide-npc/checklists/: requirements.md
specs/002-helper-guide-npc/contracts/: ingest.cli.md  retrieve.openapi.yaml
tools/: fetch_chatwoot_kb.py
voice_library/: README.md
voice_library/profiles/demo-ru/: meta.json
