[project]
name = "project-800ms-api"
version = "0.1.0"
description = "FastAPI control plane for the project-800ms voice assistant"
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "pydantic-settings==2.13.1",
    "livekit-api==1.1.0",
    # Per-tenant rate limiting. See Phase 1 PRD — key_func resolves to
    # tenant_id from the X-API-Key header so one noisy tenant can't starve
    # others.
    "slowapi==0.1.9",
    "httpx>=0.28.1",
    # SQLAlchemy 2.0 async + asyncpg + Alembic for tenant/session persistence.
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    # TTL cache for authenticated tenant lookup — avoids hitting Postgres
    # on every request. Revocations propagate within TENANT_CACHE_TTL_SECONDS.
    "cachetools==5.5.0",
    # ULID for request IDs — monotonic, sortable, URL-safe, shorter than UUID.
    "python-ulid==3.1.0",
    # Prometheus instrumentation — request counters + latency histograms
    # exposed at /metrics. See apps/api/observability.py.
    "prometheus-client==0.25.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    # Used by tests to inspect/verify the JWTs that /sessions mints. Already
    # a transitive dep via livekit-api, but declared explicitly so test imports
    # don't depend on dependency drift.
    "pyjwt==2.12.1",
    # Real Postgres in tests (not SQLite) to catch dialect drift. Requires
    # Docker to be running locally. CI uses a GHA service container instead,
    # see .github/workflows/ci.yml.
    "testcontainers[postgresql]==4.14.2",
]

[tool.uv]
# `required-environments` declares which platforms `uv lock` must be able to
# resolve for. We deploy to linux x86_64 (Docker), so the lock file is
# guaranteed to install there. macOS devs can still run `uv sync` locally —
# uv will resolve macOS-specific wheels on the fly without modifying the
# lock file.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "tests/.pytest_cache"]

[tool.ruff.format]
# Defaults are fine; this section makes the contract explicit and lets
# `ruff format --check .` catch drift in CI.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: tests that spin up Postgres testcontainers (skipped in quick runs)",
]
