[project]
name = "project-800ms-agent"
version = "0.1.0"
description = "Pipecat voice agent (STT → LLM → TTS) for project-800ms"
requires-python = "==3.12.*"
dependencies = [
    # Pipecat + the concrete SDKs we use (livekit, piper, openai, silero).
    # The [whisper] extra is intentionally not pulled in — GigaAM is the
    # only STT since the 2026-04-19 A/B experiment, and retiring Whisper
    # removed the CUDA 12 ABI pin on ctranslate2.
    "pipecat-ai[livekit,piper,openai,silero]==0.0.108",
    "livekit-api==1.1.0",
    "loguru==0.7.3",
    "aiohttp>=3.11,<4",
    # GigaAM-v3 (Sber, MIT) — the only STT since the 2026-04-19 A/B
    # experiment (docs/experiments/2026-04-19-stt-ab/phase-a-results.md).
    # PyPI 0.1.0 is v1/v2-only; v3 requires git source + the `torch` extra
    # for PyTorch runtime. SHA pinned — do not follow `main`.
    "gigaam[torch] @ git+https://github.com/salute-developers/GigaAM@6e4b027c6fb554e09e8b9059b757a175295ab879",
    # gigaam_stt.py writes incoming int16 PCM to a temp WAV per segment
    # because GigaAM's public transcribe() only accepts file paths (shells
    # out to ffmpeg).
    "soundfile>=0.12,<0.14",
    # Coqui XTTS v2 — 17-language zero-shot voice-cloning TTS. Run
    # in-process like Silero; lazy-imported in models.load_xtts() so
    # agents that don't enable XTTS don't pay the import cost.
    # ``coqui-tts`` (not ``TTS``) is the maintained fork on PyPI since
    # the original Coqui TTS repo was archived; 0.27.5 (Jan 2026) drops
    # the embedded torch requirement so torch version is controlled by
    # our existing pin (via gigaam[torch]). Weights are CPML-licensed
    # (non-commercial) — fine for the demo, flag for any commercial
    # deploy. See services/agent/xtts_tts.py module docstring.
    "coqui-tts>=0.27.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.uv]
# `required-environments` declares which platforms `uv lock` must be able to
# resolve for. Linux x86_64 is the Docker target (NVIDIA CUDA base image).
# macOS arm64 is fine for editing/typing locally but cannot run GigaAM on
# GPU; uv will still resolve macOS wheels on demand for `uv sync`.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# Security hardening on transitive deps.
#   - onnx: pulled by gigaam, which pins onnx==1.19.* in its pyproject.
#     Versions <=1.20.1 have 6 open CVEs (4 high, 2 moderate) around
#     path traversal + hub.load() + ExternalData handling. 1.21.0 is the
#     first clean release. `override-dependencies` bypasses gigaam's
#     equality pin; this is safe because gigaam never actually imports
#     onnx — it imports onnxruntime. The `onnx` entry in gigaam's
#     pyproject is a stale declaration (verified by grepping gigaam's
#     source for `import onnx` / `from onnx` — only onnxruntime shows up).
override-dependencies = [
    "onnx>=1.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "tests/.pytest_cache"]

[tool.ruff.format]
# Defaults are fine; this section makes the contract explicit and lets
# `ruff format --check .` catch drift in CI.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
